--- a/src/App.css
+++ b/src/App.css
@@ -179,7 +179,7 @@ body, .app {
   font-size: 0.8em;
 }
 
-/* shadow filter */
+/* shadow filter for book image */
 
 .shadowfilter {
   filter: drop-shadow(0px 0px 0px rgba(255,255,255,0.80));
