--- a/src/App.css
+++ b/src/App.css
@@ -179,11 +179,11 @@ body, .app {
   font-size: 0.8em;
 }
 
-/* shadow filter for book image */
+/* shadow filter for book image: code from web */
 
 .shadowfilter {
   filter: drop-shadow(0px 0px 0px rgba(255,255,255,0.80));
-  transition: all 0.5s linear;
+  transition: all 0.4s linear;
 }.shadowfilter:hover {
    filter: drop-shadow(0px 0px 8px rgba(0, 128, 255, 0.8));
 }
